# coding_problems

./: .gitignore  332-challenge-2025-08-03.cpp  334-problem-2025-08-04.cpp  405-problem-2025-08-07.cpp  CMakeLists.txt  README.md
logic/: README.md
logic/basic/: README.md  dice_problem.py  efficient_closest_number.py  efficient_even_odd.py  efficient_sum_natural.py  efficient_sum_squares.py  efficient_swap_numbers.py  even_odd.py  iterative_multiplication_table.py  naive_closest_number.py  naive_even_odd.py  naive_sum_natural.py  naive_sum_squares.py  recursive_multiplication_table.py  recursive_sum_natural.py  swap_numbers.py
logic/easy/: prime_test.py  reverse_digits.py  sum_digits.py
problems/: 1-problem-2025-08-09.cpp  334-problem-2025-08-04.cpp  339-problem-2025-08-10.cpp  405-problem-2025-08-07.cpp  502-problem-2025-08-14.cpp  CMakeLists.txt
